Slash commands (#52)
Implement slash commands