@@ -1,44 +1,54 @@
 package toby.command.commands.misc;
 
-import net.dv8tion.jda.api.entities.*;
+import net.dv8tion.jda.api.entities.Guild;
+import net.dv8tion.jda.api.entities.GuildChannel;
+import net.dv8tion.jda.api.entities.Member;
+import net.dv8tion.jda.api.entities.VoiceChannel;
+import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
+import net.dv8tion.jda.api.interactions.commands.OptionMapping;
+import net.dv8tion.jda.api.interactions.commands.OptionType;
+import net.dv8tion.jda.api.interactions.commands.build.OptionData;
 import net.dv8tion.jda.api.requests.restaction.ChannelAction;
 import toby.command.CommandContext;
 import toby.command.ICommand;
 import toby.jpa.dto.UserDto;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 import java.util.stream.Collectors;
 
 public class TeamCommand implements IMiscCommand {
 
 
+    private final String TEAM_MEMBERS = "members";
+    private final String TEAM_SIZE = "size";
+    private final String CLEANUP = "cleanup";
+
     @Override
-    public void handle(CommandContext ctx, String prefix, UserDto requestingUserDto, Integer deleteDelay) {
-        cleanupTemporaryChannels(ctx.getGuild().getChannels());
-        final TextChannel channel = ctx.getChannel();
-        final Message message = ctx.getMessage();
-        ICommand.deleteAfter(message, deleteDelay);
-        List<String> args = ctx.getArgs();
-        if(args.contains("cleanup")){
+    public void handle(CommandContext ctx, UserDto requestingUserDto, Integer deleteDelay) {
+        SlashCommandInteractionEvent event = ctx.getEvent();
+        event.deferReply().queue();
+        cleanupTemporaryChannels(event.getGuild().getChannels());
+        ICommand.deleteAfter(event.getHook(), deleteDelay);
+        List<OptionMapping> args = event.getOptions();
+        if (event.getOption("cleanup").getAsBoolean()) {
             return;
         }
         if (args.isEmpty()) {
-            channel.sendMessage(getHelp(prefix)).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
+            event.getHook().sendMessage(getDescription()).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
             return;
         }
         //Shuffle gives an NPE with default return of message.getMentionedMembers()
-        List<Member> mentionedMembers = new ArrayList<>(message.getMentions().getMembers());
-        Optional<String> teamOptional = args.stream()
-                .filter(s -> !s.matches(Message.MentionType.USER.getPattern().pattern()))
-                .filter(s -> Integer.parseInt(s) > 0)
-                .findFirst();
+        List<Member> mentionedMembers = event.getOption(TEAM_MEMBERS).getMentions().getMembers();
+        int teamSize = event.getOption(TEAM_SIZE).getAsInt();
         int defaultNumberOfTeams = 2;
-        int listsToInitialise = teamOptional.map(Integer::parseInt).orElse(defaultNumberOfTeams);
+        int listsToInitialise = teamSize != 0 ? teamSize : defaultNumberOfTeams;
         listsToInitialise = Math.min(listsToInitialise, mentionedMembers.size());
         List<List<Member>> teams = split(mentionedMembers, listsToInitialise);
 
         StringBuilder sb = new StringBuilder();
-        Guild guild = ctx.getGuild();
+        Guild guild = event.getGuild();
         for (int i = 0; i < teams.size(); i++) {
             String teamName = String.format("Team %d", i + 1);
             sb.append(String.format("**%s**: %s \n", teamName, teams.get(i).stream().map(Member::getEffectiveName).collect(Collectors.joining(", "))));
@@ -46,11 +56,11 @@ public class TeamCommand implements IMiscCommand {
             VoiceChannel createdVoiceChannel = voiceChannel.setBitrate(guild.getMaxBitrate()).complete();
             teams.get(i).forEach(target -> guild.moveVoiceMember(target, createdVoiceChannel)
                     .queue(
-                            (__) -> channel.sendMessageFormat("Moved %s to '%s'", target.getEffectiveName(), createdVoiceChannel.getName()).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay)),
-                            (error) -> channel.sendMessageFormat("Could not move '%s'", error.getMessage()).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay))
+                            (__) -> event.replyFormat("Moved %s to '%s'", target.getEffectiveName(), createdVoiceChannel.getName()).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay)),
+                            (error) -> event.replyFormat("Could not move '%s'", error.getMessage()).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay))
                     ));
         }
-        channel.sendMessage(sb).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
+        event.getHook().sendMessage(sb.toString()).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
     }
 
     private void cleanupTemporaryChannels(List<GuildChannel> channels) {
@@ -79,16 +89,17 @@ public class TeamCommand implements IMiscCommand {
     }
 
     @Override
-    public String getHelp(String prefix) {
-        return "Return X teams from a list of tagged users. \n" +
-                String.format("Usage: `%steam @person1 @person2` \n", prefix) +
-                String.format("`%steam @person1 @person2 $numberOfTeams` (defaults to 2) \n", prefix) +
-                String.format("`%steam cleanup` to delete the temporary channels that may be leftover (this is also run before the command does anything) \n", prefix) +
-                String.format("Aliases are: '%s'", String.join(",", getAliases()));
+    public String getDescription() {
+        return "Return X teams from a list of tagged users.";
     }
 
     @Override
-    public List<String> getAliases() {
-        return Arrays.asList("teams");
+    public List<OptionData> getOptionData() {
+        return List.of(
+                new OptionData(OptionType.STRING, TEAM_MEMBERS, "Which discord users would you like to split into the teams?", true),
+                new OptionData(OptionType.INTEGER, TEAM_SIZE, "Number of teams you want to split members into (defaults to 2)"),
+                new OptionData(OptionType.BOOLEAN, CLEANUP, "Do you want to perform cleanup to reset the temporary channels in the guild?")
+        );
+
     }
 }
